--- a/app/src/main/res/layout/activity_bipolar_result.xml
+++ b/app/src/main/res/layout/activity_bipolar_result.xml
@@ -15,20 +15,20 @@
 
     <ImageView
         android:id="@+id/Logo"
+        android:layout_width="307dp"
+        android:layout_height="420dp"
+        android:layout_gravity="start"
         android:layout_marginStart="35dp"
         android:layout_marginEnd="10dp"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="start"
-        android:src="@drawable/voz"
-        android:contentDescription="TODO" />
+        android:contentDescription="TODO"
+        android:src="@drawable/voz" />
 
     <TextView
         android:id="@+id/results"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="bipResult"
+        android:text="@string/result"
         android:textAllCaps="false"
         android:textColor="#234E70"
         android:textColorHighlight="#3F51B5"
@@ -46,7 +46,7 @@
         android:id="@+id/redo"
         android:background="@drawable/rounded_button"
         android:backgroundTint="#C0B2E7"
-        android:text="bipRetry"
+        android:text="@string/retry"
         android:textAllCaps="false"
         android:textColor="#664564"
         android:textColorHighlight="#664564"
@@ -55,5 +55,16 @@
         android:textSize="18sp"
         app:layout_constraintTop_toBottomOf="@id/results"
         />
+
+    <ImageView
+        android:id="@+id/back"
+        android:layout_width="61dp"
+        android:layout_height="55dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="1dp"
+        android:layout_marginBottom="55dp"
+        android:padding="5dp"
+        android:src="@drawable/back" />
 
 </LinearLayout>
