--- a/app/src/main/res/layout/activity_depression.xml
+++ b/app/src/main/res/layout/activity_depression.xml
@@ -24,7 +24,7 @@
             android:layout_gravity="center"
             android:layout_marginStart="0dp"
             android:layout_marginTop="20dp"
-            android:text="over_the_last_2_weeks_how_often_have_you_been_bothered_by_the_following_problems"
+            android:text="@string/over_the_last_2_weeks_how_often_have_you_been_bothered_by_the_following_problems"
             android:textAllCaps="false"
             android:textColor="#234E70"
             android:textColorHighlight="#3F51B5"
@@ -40,7 +40,7 @@
             android:layout_marginStart="0dp"
             android:layout_marginTop="30dp"
             android:autoSizeTextType="uniform"
-            android:text="_1_little_interest_or_pleasure_in_doing_things"
+            android:text="1.Little interest or pleasure in doing things"
             android:textAllCaps="false"
             android:textColor="#234E70"
             android:textColorHighlight="#3F51B5"
@@ -57,7 +57,7 @@
             android:layout_marginTop="30dp"
             android:background="@drawable/rounded_button"
             android:backgroundTint="#C0B2E7"
-            android:text="not_at_all"
+            android:text="@string/not_at_all"
             android:textAllCaps="false"
             android:textColor="#234E70"
             android:textColorHighlight="#664564"
@@ -75,7 +75,7 @@
             android:layout_marginTop="30dp"
             android:background="@drawable/rounded_button"
             android:backgroundTint="#C0B2E7"
-            android:text="Several_days"
+            android:text="@string/several_days"
             android:textAllCaps="false"
             android:textColor="#234E70"
             android:textColorHighlight="#664564"
@@ -93,7 +93,7 @@
             android:layout_marginTop="30dp"
             android:background="@drawable/rounded_button"
             android:backgroundTint="#C0B2E7"
-            android:text="over_half_the_days"
+            android:text="@string/over_half_the_days"
             android:textAllCaps="false"
             android:textColor="#234E70"
             android:textColorHighlight="#664564"
@@ -113,7 +113,7 @@
             android:layout_marginTop="30dp"
             android:background="@drawable/rounded_button"
             android:backgroundTint="#C0B2E7"
-            android:text="nearly_every_day"
+            android:text="@string/nearly_every_day"
             android:textAllCaps="false"
             android:textColor="#234E70"
             android:textColorHighlight="#664564"
