--- a/app/src/main/res/layout/activity_ptsd_2.xml
+++ b/app/src/main/res/layout/activity_ptsd_2.xml
@@ -23,7 +23,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
             android:layout_marginTop="20dp"
-            android:text="in_the_past_have_you"
+            android:text="@string/in_the_past_have_you"
             android:textAllCaps="false"
             android:textColor="#234E70"
             android:textColorHighlight="#3F51B5"
@@ -37,7 +37,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
             android:layout_marginTop="60dp"
-            android:text="tried_hard_not_to_think_about_the_event_s_or_went_out_of_your_way_to_avoid_situations_that_reminded_you_of_the_event_s"
+            android:text="@string/tried_hard_not_to_think_about_the_events_or_went_out_of_your_way_to_avoid_situations_that_reminded_you_of_the_events"
             android:textAllCaps="false"
             android:textColor="#234E70"
             android:textColorHighlight="#3F51B5"
@@ -53,7 +53,7 @@
             android:layout_marginTop="80dp"
             android:background="@drawable/rounded_button"
             android:backgroundTint="#C0B2E7"
-            android:text="yes"
+            android:text="@string/yes"
             android:textAllCaps="false"
             android:textColor="#234E70"
             android:textColorHighlight="#664564"
@@ -69,7 +69,7 @@
             android:layout_marginTop="40dp"
             android:background="@drawable/rounded_button"
             android:backgroundTint="#C0B2E7"
-            android:text="no"
+            android:text="@string/no"
             android:textAllCaps="false"
             android:textColor="#234E70"
             android:textColorHighlight="#664564"
