--- a/app/src/main/res/layout/activity_adhd.xml
+++ b/app/src/main/res/layout/activity_adhd.xml
@@ -25,7 +25,7 @@
             android:layout_gravity="center"
             android:layout_marginStart="0dp"
             android:layout_marginTop="20dp"
-            android:text="adhdOvr"
+            android:text="@string/attention_deficit_hyperactivity_disorder"
             android:textAllCaps="false"
             android:textColor="#234E70"
             android:textColorHighlight="#3F51B5"
@@ -42,7 +42,7 @@
             android:layout_marginStart="0dp"
             android:layout_marginTop="30dp"
             android:autoSizeTextType="uniform"
-            android:text="adhdQ1"
+            android:text="1"
             android:textAllCaps="false"
             android:textColor="#234E70"
             android:textColorHighlight="#3F51B5"
