--- a/app/src/main/res/layout/activity_ocd.xml
+++ b/app/src/main/res/layout/activity_ocd.xml
@@ -25,7 +25,7 @@
             android:layout_gravity="center"
             android:layout_marginStart="0dp"
             android:layout_marginTop="20dp"
-            android:text="ocdOvr"
+            android:text="@string/obsessive_compulsive_disorder"
             android:textAllCaps="false"
             android:textColor="#234E70"
             android:textColorHighlight="#3F51B5"
@@ -41,7 +41,7 @@
             android:layout_marginStart="0dp"
             android:layout_marginTop="30dp"
             android:autoSizeTextType="uniform"
-            android:text="ocdQ1"
+            android:text="1"
             android:textAllCaps="false"
             android:textColor="#234E70"
             android:textColorHighlight="#3F51B5"
