--- a/app/src/main/res/layout/activity_adhd.xml
+++ b/app/src/main/res/layout/activity_adhd.xml
@@ -59,7 +59,7 @@
             android:layout_marginStart="0dp"
             android:layout_marginTop="30dp"
             android:backgroundTint="#A7BEAE"
-            android:text="adhdA1"
+            android:text="@string/never"
             android:textAllCaps="false"
             android:textColor="#234E70"
             android:textColorHighlight="#664564"
@@ -76,7 +76,7 @@
             android:layout_marginStart="0dp"
             android:layout_marginTop="30dp"
             android:backgroundTint="#A7BEAE"
-            android:text="adhdA2"
+            android:text="@string/rarely"
             android:textAllCaps="false"
             android:textColor="#234E70"
             android:textColorHighlight="#664564"
@@ -93,7 +93,7 @@
             android:layout_marginStart="0dp"
             android:layout_marginTop="30dp"
             android:backgroundTint="#A7BEAE"
-            android:text="adhdA3"
+            android:text="@string/sometimes"
             android:textAllCaps="false"
             android:textColor="#234E70"
             android:textColorHighlight="#664564"
@@ -110,7 +110,7 @@
             android:layout_marginStart="0dp"
             android:layout_marginTop="30dp"
             android:backgroundTint="#A7BEAE"
-            android:text="adhdA4"
+            android:text="@string/often"
             android:textAllCaps="false"
             android:textColor="#234E70"
             android:textColorHighlight="#664564"
@@ -127,7 +127,7 @@
             android:layout_marginStart="0dp"
             android:layout_marginTop="30dp"
             android:backgroundTint="#A7BEAE"
-            android:text="adhdA5"
+            android:text="@string/very_often"
             android:textAllCaps="false"
             android:textColor="#234E70"
             android:textColorHighlight="#664564"
