<belarusian> language add words

--- a/app/src/main/res/layout/activity_meds.xml
+++ b/app/src/main/res/layout/activity_meds.xml
@@ -50,6 +50,7 @@
             android:layout_marginEnd="20dp"
             android:layout_marginBottom="14dp"
             android:text="@string/pills"
+            android:clickable="false"
             android:textColor="#234E70"
             android:textStyle="normal"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -101,6 +102,7 @@
             android:layout_marginBottom="14dp"
             android:gravity="center"
             android:text="@string/visits"
+            android:clickable="false"
             android:textColor="#234E70"
             android:textStyle="normal"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -155,6 +157,7 @@
             android:layout_marginBottom="14dp"
             android:gravity="center"
             android:text="@string/labs"
+            android:clickable="false"
             android:textColor="#234E70"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
