--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -8,17 +8,17 @@
 
     <item
         android:id="@+id/navigation_relax"
-        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:icon="@drawable/relax"
         android:title="@string/relax"
         />
 
     <item
         android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
+        android:icon="@drawable/med"
+        android:title="@string/meds" />
     <item
         android:id="@+id/navigation_other"
-        android:icon="@drawable/ic_baseline_home_24"
+        android:icon="@drawable/all"
         android:title="@string/other" />
 
 </menu>
