<belarusian> language add words

--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -18,7 +18,7 @@
         android:layout_marginBottom="500dp"
         android:autofillHints=""
         android:ems="10"
-        android:hint="Email"
+        android:hint="@string/email"
         android:inputType="textEmailAddress"
         android:padding="10dp"
         android:textColor="#234E70"
@@ -39,7 +39,7 @@
         android:layout_marginBottom="419dp"
         android:autofillHints=""
         android:ems="10"
-        android:hint="Current password"
+        android:hint="@string/current_password"
         android:inputType="textPassword"
         android:padding="10dp"
         android:textColor="#234E70"
@@ -59,7 +59,7 @@
         android:layout_marginBottom="339dp"
         android:autofillHints=""
         android:ems="10"
-        android:hint="New Password"
+        android:hint="@string/new_password"
         android:inputType="textPassword"
         android:padding="10dp"
         android:textColor="#234E70"
@@ -80,7 +80,7 @@
         android:layout_marginBottom="268dp"
         android:autofillHints=""
         android:ems="10"
-        android:hint="Repeat Password"
+        android:hint="@string/repeat_password"
         android:inputType="textPassword"
         android:padding="10dp"
         android:textColor="#234E70"
@@ -98,7 +98,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="16dp"
-        android:text="Save"
+        android:text="@string/save"
         android:textColor="#234E70"
         android:textSize="13sp"
         app:layout_constraintEnd_toEndOf="parent"
