--- a/app/src/main/res/layout/activity_change_email.xml
+++ b/app/src/main/res/layout/activity_change_email.xml
@@ -17,7 +17,7 @@
         android:layout_marginBottom="488dp"
         android:autofillHints=""
         android:ems="10"
-        android:hint="Email"
+        android:hint="@string/email"
         android:inputType="textEmailAddress"
         android:padding="10dp"
         android:textColor="#234E70"
@@ -37,7 +37,7 @@
         android:layout_marginBottom="404dp"
         android:autofillHints=""
         android:ems="10"
-        android:hint="New Email"
+        android:hint="@string/new_email"
         android:inputType="textEmailAddress"
         android:padding="10dp"
         android:textColor="#234E70"
@@ -57,7 +57,7 @@
         android:layout_marginBottom="337dp"
         android:autofillHints=""
         android:ems="10"
-        android:hint="Password"
+        android:hint="@string/password"
         android:inputType="textPassword"
         android:padding="10dp"
         android:textColor="#234E70"
@@ -75,7 +75,7 @@
         android:layout_marginTop="414dp"
         android:layout_marginEnd="91dp"
         android:layout_marginBottom="267dp"
-        android:text="Save"
+        android:text="@string/save"
         android:textColor="#234E70"
         android:textSize="13sp"
         app:layout_constraintBottom_toBottomOf="parent"
