--- a/app/src/main/res/layout/activity_doctor_add.xml
+++ b/app/src/main/res/layout/activity_doctor_add.xml
@@ -17,7 +17,7 @@
         android:paddingStart="10dp"
         android:paddingTop="60dp"
         android:paddingBottom="10dp"
-        android:text="Add Appointment"
+        android:text="@string/add_appointment"
         android:textColor="#234E70"
         android:textSize="40sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -31,7 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="32dp"
-        android:hint="Reason"
+        android:hint="@string/reason"
         android:textColor="#234E70"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/doctor_name">
@@ -52,7 +52,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="84dp"
         android:layout_marginEnd="32dp"
-        android:hint="Doctor's Name"
+        android:hint="@string/doctor_s_name"
         android:textColor="#234E70"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView">
@@ -84,7 +84,7 @@
         android:layout_marginTop="60dp"
         android:layout_marginEnd="92dp"
         android:onClick="showDatePickerDialog"
-        android:text="Select Date"
+        android:text="@string/select_date"
         android:textColor="#234E70"
         android:textSize="30sp"
         android:textStyle="bold"
@@ -118,7 +118,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="128dp"
-        android:text="ADD"
+        android:text="@string/add"
         android:textColor="#234E70"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
