--- a/app/src/main/res/layout/activity_lab_add.xml
+++ b/app/src/main/res/layout/activity_lab_add.xml
@@ -85,7 +85,7 @@
         android:layout_marginTop="60dp"
         android:layout_marginEnd="92dp"
         android:onClick="showDatePickerDialog"
-        android:text="Select Date"
+        android:text="@string/select_date"
         android:textColor="#234E70"
         android:textSize="30sp"
         android:textStyle="bold"
@@ -119,7 +119,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="128dp"
-        android:text="ADD"
+        android:text="@string/add"
         android:textColor="#234E70"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
