--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -6,7 +6,7 @@
     android:background="@color/Hex"
     android:gravity="center"
     android:minWidth="246dp"
-    android:text="Name"
+    android:text="@string/name"
     android:textColor="#234E70"
     android:textIsSelectable="false"
     android:textSize="14sp" />
