--- a/app/src/main/res/layout/activity_notes_list.xml
+++ b/app/src/main/res/layout/activity_notes_list.xml
@@ -50,7 +50,7 @@
         android:id="@+id/image_logo"
         android:layout_width="match_parent"
         android:layout_height="66dp"
-        android:layout_marginBottom="496dp"
+        android:layout_marginTop="650dp"
         android:contentDescription=""
         android:src="@drawable/vozyk_3" />
 
