--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,15 +8,32 @@
     tools:context=".ui.about.About_us">
 
 
+    <TextView
+        android:layout_width="399dp"
+        android:layout_height="396dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="108dp"
+        android:layout_marginEnd="11dp"
+        android:layout_marginBottom="227dp"
+        android:text="@string/app_name"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="408dp"
-        android:layout_height="223dp"
+        android:layout_width="404dp"
+        android:layout_height="182dp"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="530dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="542dp"
+        android:layout_marginBottom="7dp"
         android:clickable="false"
         android:src="@drawable/vozyk_3"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="542dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
