--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,15 +9,17 @@
 
     <Spinner
         android:id="@+id/spinnerLanguage"
-        android:layout_width="294dp"
-        android:layout_height="51dp"
+        android:layout_width="262dp"
+        android:layout_height="40dp"
         android:layout_marginStart="118dp"
         android:layout_marginTop="2dp"
         android:layout_marginBottom="678dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.612"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/textView"
