--- a/app/src/main/res/layout/fragment_mood.xml
+++ b/app/src/main/res/layout/fragment_mood.xml
@@ -301,11 +301,12 @@
 
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:id="@+id/calender_in_stats"
-                        android:layout_width="400dp"
-                        android:layout_height="350dp"
-                        android:layout_marginTop="20dp"
+                        android:layout_width="383dp"
+                        android:layout_height="325dp"
+                        android:layout_marginTop="8dp"
                         android:background="@color/Hex"
                         app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="1.0"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent">
 
@@ -864,8 +865,6 @@
                                 android:textColor="@color/black"
                                 app:layout_constraintStart_toEndOf="@+id/calender_button_showing_shadow_8"
                                 app:layout_constraintTop_toBottomOf="@+id/calender_button_showing_shadow_29" />
-
-
 
 
                         </androidx.constraintlayout.widget.ConstraintLayout>
