--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="Theme.Vožyk" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Vožyk" parent="Theme.AppCompat.Light">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/Sage</item>
         <item name="colorPrimaryVariant">@color/Snow</item>
