--- a/app/src/main/res/layout/activity_to_do_list.xml
+++ b/app/src/main/res/layout/activity_to_do_list.xml
@@ -7,7 +7,7 @@
     android:layout_gravity="center_vertical"
     android:background="@color/Hex"
     android:orientation="vertical"
-    tools:context=".ui.settings.ToDoList.ToDoListActivity">
+    tools:context=".ui.ToDoList.ToDoListActivity">
 
 
     <LinearLayout
