--- a/app/src/main/res/layout/activity_doctor.xml
+++ b/app/src/main/res/layout/activity_doctor.xml
@@ -89,7 +89,7 @@
             app:menu="@menu/doc_menu" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/doctor_add_btn"
+            android:id="@+id/add"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/RobbinsEggBlue"
