--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -162,7 +162,7 @@
         app:layout_constraintTop_toBottomOf="@+id/toggleButton1" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/appointmentText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="74dp"
@@ -190,7 +190,7 @@
         app:layout_constraintBottom_toTopOf="@+id/imageView2"
         app:layout_constraintEnd_toStartOf="@+id/name"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/appointmentText" />
 
     <ImageView
         android:id="@+id/imageView2"
