--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -22,7 +22,7 @@
         app:layout_constraintVertical_bias="1.0" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/appointmentText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/log_in_to_vo_yk"
